More List Concepts

--- a/Python_Basics/Theory/1_List.ipynb
+++ b/Python_Basics/Theory/1_List.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__List Creation__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -52,6 +60,14 @@
     "print(list_1)\n",
     "print(list_2)\n",
     "print(list_3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__List Comprehension__"
    ]
   },
   {
@@ -153,6 +169,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__List Traversal Methods__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Method 1__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -189,6 +221,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Method 2__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -214,6 +254,14 @@
     "# We can also use enumerate\n",
     "for index, value in enumerate(list_1):\n",
     "    print(f\"Index: {index}, Value: {value}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Method 3__"
    ]
   },
   {
@@ -249,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using list to create and manipulate matrices"
+    "__Using list to create and manipulate matrices__"
    ]
   },
   {
@@ -304,7 +352,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### List Class Methods"
+    "__Advanced List Slicing Syntax__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slicing syntax can be called on objects that has the properties of the abstract base class 'Sequence'. Slicing basically extends the use of the indexing operator [] and lets us create subparts(sublists, substrings etc) of the object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index Positions of l: [0, 1, 2, 3, 4, 5]\n",
+      "Values at Index     : [1, 2, 3, 4, 5, 6]\n",
+      "sublist index start: 2; end: 5-1 = 4\n",
+      "sublist             : [3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4, 5, 6]\n",
+    "l_indices = list(range(len(l)))\n",
+    "\n",
+    "# list[a:b] -> returns a sublist that starts with the\n",
+    "# value at index 'a' of the main list and ends with the\n",
+    "# value at index 'b-1' of the main list.\n",
+    "\n",
+    "sub_list = l[2:5]\n",
+    "\n",
+    "print(f\"Index Positions of l: {l_indices}\")\n",
+    "print(f\"Values at Index     : {l}\")\n",
+    "print(f\"sublist index start: 2; end: 5-1 = 4\")\n",
+    "print(f\"sublist             : {sub_list}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The indexing operator also takes negative integer values as input, and negative values can be used to access the list elements in reverse order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive Indices     : [0, 1, 2, 3, 4, 5]\n",
+      "List in default order: [1, 2, 3, 4, 5, 6]\n",
+      "Negative Indices     : [-1, -2, -3, -4, -5, -6]\n",
+      "List in reverse order: [6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Positive Indices     : {list(range(len(l)))}\")\n",
+    "print(f\"List in default order: {l}\")\n",
+    "print(f\"Negative Indices     : {list(range(-1, -len(l)-1, -1))}\")\n",
+    "print(f\"List in reverse order: {l[-1:-len(l)-1:-1]}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An important thing to remember when using negative indices is that negative indexing starts from '-1', and is not zero-based. The reasoning behind this is that we can't have anything as '-0'. This would introduce various unwanted errors in the programming language."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Operators on Lists__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Addition__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding two lists concatanates the elements of both lists to form a list containing all elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [1, 2, 3]\n",
+    "l2 = [4, 5, 6]\n",
+    "\n",
+    "l = l1 + l2\n",
+    "\n",
+    "print(l)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Multiplication__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can multiply an integer with a list object, but list and list multiplication is not allowed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [1, 2, 3]\n",
+    "i1 = 2\n",
+    "\n",
+    "l = i1 * l1\n",
+    "\n",
+    "print(l)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__List Class Methods__"
    ]
   },
   {
@@ -344,18 +563,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [18], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Difference between calling 'sort()' class method and using 'sorted' function\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[39m# This command doesn't return anything, and sorts the list in-line\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39m# lvalue and rvalue , lvalue = rvalue \u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m l\u001b[39m.\u001b[39;49msort()\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(l)\n\u001b[0;32m      8\u001b[0m \u001b[39m# This is a common mistake, this assign None value to l as l.sort() returns None\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39m# l = l.sort()\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'sort'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 2, 3, 3]\n",
+      "3\n",
+      "3\n"
      ]
     }
    ],
@@ -367,7 +584,7 @@
     "l.sort()\n",
     "print(l)\n",
     "\n",
-    "# This is a common mistake, this assign None value to l as l.sort() returns None\n",
+    "# This is a common mistake, this assigns None value to l as l.sort() returns None\n",
     "# l = l.sort()\n",
     "\n",
     "l = l.pop()\n",
@@ -392,6 +609,14 @@
    "source": [
     "# Due to our mistake in the above cell, we have lost all data in 'l' \n",
     "print(l)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Append Class Method__"
    ]
   },
   {
