Two sum solution

--- a/LeetCode/Problem 1 - Two Sum/Analysis.ipynb
+++ b/LeetCode/Problem 1 - Two Sum/Analysis.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "[0, 1]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,12 +115,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Approach 2 : Binary Search"
+    "# Approach 2 : Binary Search\n",
+    "# This approach is only better if the provided list of integers is sorted\n",
+    "# otherwise we will have to sort the list first, which is expensive"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Approach 3 : Hash Table / Dictionary\n",
+    "# This approach is optimal for both sorted and\n",
+    "# unsorted versions of the problem \n",
+    "# it uses the dictionary core data type\n",
+    "# which lets us rapidly look up key-value pairs\n",
+    "\n",
+    "def twoSumOptimal(nums, target):\n",
+    "    nums_dict = dict()\n",
+    "    for index, value in enumerate(nums):\n",
+    "        if (target - value) in nums_dict: \n",
+    "            return [nums_dict[target - value], index]\n",
+    "        nums_dict[value] = index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [2, 7, 11, 19]\n",
+    "target = 9\n",
+    "\n",
+    "twoSumOptimal(nums, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3, 2, 4]\n",
+    "target = 6\n",
+    "\n",
+    "twoSumOptimal(nums, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
