--- a/LeetCode/Problem 2 - Add Two Numbers/Analysis.ipynb
+++ b/LeetCode/Problem 2 - Add Two Numbers/Analysis.ipynb
@@ -181,6 +181,30 @@
    "source": [
     "### Solution"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def addTwoNumbers(self, l1: ListNode, l2: ListNode) -> ListNode:\n",
+    "    carry = 0\n",
+    "    head = ListNode(0)\n",
+    "    prev = head\n",
+    "    while l1 or l2 or carry:\n",
+    "        if l1:\n",
+    "            carry += l1.val\n",
+    "            l1 = l1.next\n",
+    "        if l2:\n",
+    "            carry += l2.val\n",
+    "            l2 = l2.next\n",
+    "        curr_val = carry % 10\n",
+    "        prev.next = ListNode(curr_val)\n",
+    "        prev = prev.next\n",
+    "        carry = carry // 10\n",
+    "    return head.next"
+   ]
   }
  ],
  "metadata": {
@@ -199,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
