Singly Linked List Analysis Complete

--- a/LeetCode/Problem 2 - Add Two Numbers/Analysis.ipynb
+++ b/LeetCode/Problem 2 - Add Two Numbers/Analysis.ipynb
@@ -67,7 +67,9 @@
     "\n",
     "A node in a singly linked list is itself a data container that contains a stored value of a chosen data type and also contains a __pointer__ to the __memory address__ of the next node in the singly linked list.\n",
     "\n",
-    "The simplest type of singly linked list is made by linking one or more nodes. It is called singly linked because the data structure starts with a __pointer__ to the __memory address__ of the __head(The first node of the linked list)__ node and then the next node is accessed by reassigning the __pointer__ to point to the stored __memory address__ in the current node, but once the pointer to the current node is changed to point towards the next node we cannot go back to a previous node. All subsequent nodes are accessed similarly. This allows us to use one way traversal through the list."
+    "The simplest type of singly linked list is made by linking one or more nodes. It is called singly linked because the data structure starts with a __pointer__ to the __memory address__ of the __head(The first node of the linked list)__ node and then the next node is accessed by reassigning the __pointer__ to point to the stored __memory address__ in the current node, but once the pointer to the current node is changed to point towards the next node we cannot go back to a previous node. All subsequent nodes are accessed similarly. This allows us to use one way traversal through the list.\n",
+    "\n",
+    "Python manages memory automatically through reference counting and garbage collection, hence the concept of pointers and memory address references is not explicitly visible when writing program in python."
    ]
   },
   {
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,11 +186,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def addTwoNumbers(self, l1: ListNode, l2: ListNode) -> ListNode:\n",
+    "def addTwoNumbers(l1: ListNode, l2: ListNode) -> ListNode:\n",
     "    carry = 0\n",
     "    head = ListNode(0)\n",
     "    prev = head\n",
@@ -205,6 +207,61 @@
     "        carry = carry // 10\n",
     "    return head.next"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Cell\n",
+    "# l1 Linked List\n",
+    "l1 = ListNode(2)\n",
+    "l1_2 = ListNode(4)\n",
+    "l1.next = l1_2\n",
+    "l1_3 = ListNode(3)\n",
+    "l1_2.next = l1_3\n",
+    "\n",
+    "# l2 Linked List\n",
+    "l2 = ListNode(5)\n",
+    "l2_2 = ListNode(6)\n",
+    "l2.next = l2_2\n",
+    "l2_3 = ListNode(4)\n",
+    "l2_2.next = l2_3\n",
+    "\n",
+    "sum_l = addTwoNumbers(l1, l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "0\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check resultant linked list from sum of l1 and l2\n",
+    "pointer_variable = sum_l\n",
+    "\n",
+    "while pointer_variable is not None:\n",
+    "    print(pointer_variable.val)\n",
+    "    pointer_variable = pointer_variable.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -223,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
